--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.12.0"
+    "react-hook-form": "^7.71.1",
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.12.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
